--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,7 +23,7 @@
     <h3 class="font-sans font-bold text-sm uppercase tracking-wider text-gray-900 border-b-2 border-gray-300 pb-2 mb-4">Categories</h3>
     <ul class="flex flex-col text-sm divide-y divide-gray-200 border-t border-b border-gray-200">
       {% for category in site.categories %}
-      <li><a class="block py-2 text-link hover:text-primary hover:underline hover:bg-gray-50 px-1" href="{{ '/archive' | relative_url }}#{{ category.name | slugify }}">{{ category.name }} <span class="text-gray-400 text-xs ml-1">({{ category.count }})</span></a></li>
+      <li><a class="block py-2 text-link hover:text-primary hover:underline hover:bg-gray-50 px-1" href="{{ '/archive' | relative_url }}#{{ category[0] | slugify }}">{{ category[0] }} <span class="text-gray-400 text-xs ml-1">({{ category[1].size }})</span></a></li>
       {% endfor %}
     </ul>
   </div>
