--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,9 +19,9 @@
       </div>
       <div class="flex flex-col gap-2">
         <h4 class="font-bold text-white uppercase tracking-wider mb-2">Legal</h4>
-        <a class="hover:text-white hover:underline" href="#">Privacy Policy</a>
-        <a class="hover:text-white hover:underline" href="#">Terms of Service</a>
-        <a class="hover:text-white hover:underline" href="#">Cookie Policy</a>
+        <a class="hover:text-white hover:underline" href="{{ '/privacy-policy' | relative_url }}">Privacy Policy</a>
+        <a class="hover:text-white hover:underline" href="{{ '/terms' | relative_url }}">Terms of Service</a>
+        <a class="hover:text-white hover:underline" href="{{ '/cookie-policy' | relative_url }}">Cookie Policy</a>
       </div>
     </div>
   </div>
