Add Utterances comments to blog posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,6 +53,19 @@ layout: default
     <div class="mt-10 pt-8 border-t border-gray-200">
       {% include navlinks.html %}
     </div>
+
+    <!-- Comments -->
+    <div class="mt-10 pt-8 border-t border-gray-200">
+      <h4 class="font-sans font-bold text-sm uppercase tracking-wider text-gray-900 mb-4">Comments</h4>
+      <script src="https://utteranc.es/client.js"
+              repo="mda1125/bytesizedsecurity"
+              issue-term="pathname"
+              label="comment"
+              theme="github-light"
+              crossorigin="anonymous"
+              async>
+      </script>
+    </div>
   </article>
   
   {% include sidebar.html %}
